Code tidy up while doing review.